# sdwis_drink_water

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  proposal_revised.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  example_get_table_information.ipynb  example_quick_check_lcr_sample_result.ipynb  example_table_water_system.ipynb  index.md  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  example_get_table_information.doctree  example_table_water_system.doctree  (+2 more)
docs/output_files/: Sample sets for additional attention in the new regulation of Lead.xlsx
examples/: quick_access_and_export.py  quick_access_and_filter_result.py  quick_check_lcr_sample_result.py  quick_get_table_information.py  quick_handle_data_fetched.py
examples/notebooks/: quick_check_lcr_sample_result.ipynb  table_water_system.ipynb
examples/simple_start_for_specific_tables/: table_enforcement_action.py  table_geographic_area.py  table_lcr_sample.py  table_lcr_sample_result.py  table_service_area.py  table_treatment.py  table_violation.py  table_violation_enf_assoc.py  table_water_system.py  table_water_system_facility.py
notebooks/: get_table_information.ipynb  quick_check_lcr_sample_result.ipynb  table_water_system.ipynb
sdwis_drink_water/: api.py  data_praser.py  utils.py  utils_for_jupyter_print.py
src/sdwis_drink_water/: __init__.py  api_for_table.py  configs.py  errors.py
tests/: SdwisTableTests.py  mock_data.py  test_sdwis_result_data_parser.py  test_sdwis_table.py
(+139 files in other folders)
